Fix bug #50590 - IntlDateFormatter::parse result is limited to the integer range